cmake_minimum_required(VERSION 3.20)
project(4_sem_cpp)

set(CMAKE_CXX_STANDARD 23)
SET(CMAKE_CXX_FLAGS -pthread)

add_executable(lesson_1 lessons/lesson_1.cpp)
add_executable(hw_1 Timer.cpp)
add_executable(lesson_2 lessons/lesson_2.cpp)
add_executable(hw_2_1 speed_test.cpp)
add_executable(hw_2_2 phone_directory.cpp)
add_executable(lesson_3 lessons/lesson_3.cpp)
add_executable(hw_3 ex_1_20.cpp)
add_executable(lesson_4 lessons/lesson_4.cpp)
add_executable(hw_4_1 pearson_json_filesystem.cpp)
add_executable(hw_4_2 date_regex.cpp)
add_executable(lesson_5 lessons/lesson_5.cpp)
add_executable(hw_5_1 mod_parallel_accumulate.cpp)
add_executable(hw_5_2 parallel_for_each.cpp)
add_executable(lesson_6 lessons/lesson_6.cpp)